# django-milli

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
django_milli/: __init__.py  apps.py  middleware.py  settings.py  settings_utils.py  signals.py  utils.py
server/server/: settings.py
server/testapp/: admin.py  models.py
server/testapp/migrations/: 0001_initial.py
